--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: pool-temp-backend
     ports:
       - "3001:3000"
+    networks:
+      - postgres
   db:
     image: postgres
     restart: always
@@ -13,3 +15,9 @@ services:
       POSTGRES_DB: mydb
     volumes:
       - ./data:/var/lib/postgresql/data
+    networks:
+      - postgres
+
+networks:
+  postgres:
+    driver: bridge
