--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,24 @@
 version: "1.0"
 services:
+  web:
+    build: pool-temp-web
+    ports:
+      - "3000:3000"
+    networks:
+      - web
+    depends_on:
+      - backend
+
   backend:
     build: pool-temp-backend
     ports:
       - "3001:3000"
     networks:
       - postgres
+      - web
+    depends_on:
+      - db
+
   db:
     image: postgres
     restart: always
@@ -20,4 +33,6 @@ services:
 
 networks:
   postgres:
+    driver: bridge
+  web:
     driver: bridge
