--- a/pool-temp-backend/package.json
+++ b/pool-temp-backend/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^9.0.1",
