--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       POSTGRES_PASSWORD: mypassword
       POSTGRES_DB: mydb
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - pg-data:/var/lib/postgresql/data
     networks:
       - postgres
     ports:
@@ -45,3 +45,6 @@ networks:
     driver: bridge
   web:
     driver: bridge
+
+volumes:
+  pg-data:
