--- a/pool-temp-web/package.json
+++ b/pool-temp-web/package.json
@@ -14,8 +14,10 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.13",
     "chart.js": "^4.2.1",
+    "chartjs-adapter-moment": "^1.0.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "moment": "^2.29.4",
     "next": "13.2.1",
     "postcss": "^8.4.21",
     "react": "18.2.0",
